@@ -6,6 +6,9 @@
 	* www/admin/grouplist.php: 
 	RFE #179: Groups & users list sortable
 
+	* www/snippet/add_snippet_to_package.php: 
+	RFE #305: Adding code snippet to code snippet package
+
 2003-04-28  Reinhard Spisser	<reinhard@spisser.it>
 
 	* common/include/utils.php:
